terraform_seminar/chapter05/security_group.tf
# ---------------------------------------------
# Security Groups
# ---------------------------------------------

# EC2用SG（HTTP許可）
resource "aws_security_group" "web_sg" {
  name        = "web-sg-${var.project_prefix}"
  description = "For Web Server"
  vpc_id      = aws_vpc.main.id

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "web-sg-${var.project_prefix}"
  }
}

# RDS用SG（EC2のSGからのみ3306許可）
resource "aws_security_group" "db_sg" {
  name        = "db-sg-${var.project_prefix}"
  description = "Allow MySQL traffic from EC2"
  vpc_id      = aws_vpc.main.id

  ingress {
    description     = "MySQL from EC2 Security Group"
    from_port       = 3306
    to_port         = 3306
    protocol        = "tcp"
    security_groups = [aws_security_group.web_sg.id]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "db-sg-${var.project_prefix}"
  }
}
